setup react components and its app.

--- a/dev/index.html
+++ b/dev/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
+<div id="content"></div>
 <!-- Add your site or application content here -->
 <script src="js/main.js"></script>
 
